<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="fragment.RecipeStepFragment">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:id="@+id/xo_recipe_step_videos"/>

        <ImageView
                android:id="@+id/iv_recipe_step_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_below="@id/xo_recipe_step_videos"
                android:visibility="gone"/>

        <ProgressBar
                android:id="@+id/pb_video_loading_indicator"
                android:layout_height="@dimen/loading_indicator_width_and_height"
                android:layout_width="@dimen/loading_indicator_width_and_height"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/recipe_step_loading_indicator_top_margin"
                android:progressTint="@color/colorPrimary"
                android:visibility="invisible"/>

        <TextView
                android:id="@+id/tv_step_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_recipe_step_thumbnail"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/recipe_step_description_margin"
                android:textSize="@dimen/recipe_step_description_text_size"
                android:lineSpacingMultiplier="1.1"/>

        <View
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:id="@+id/v_center"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_previous_step"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/v_center"
                android:text="@string/previous_button"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_action_arrow_back"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next_step"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/v_center"
                android:text="@string/next_button"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/ic_action_arrow_forward"/>

    </RelativeLayout>

</FrameLayout>
