...
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="@dimen/recipe_detail_image_bottom_margin"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_recipe_detail_name"
                    android:textSize="@dimen/recipe_detail_recipe_name_text_size"
                    android:layout_marginLeft="@dimen/recipe_detail_text_horizontal_margin"
                    android:layout_marginTop="@dimen/recipe_detail_recipe_name_top_margin"
                    tools:text="Recipe Name"
                    tools:fontFamily="sans-serif"
                    android:fontFamily="@font/gamjaflower"
...
                    android:layout_height="@dimen/recipe_detail_drop_shadow_height"
                    android:layout_below="@id/tv_ingredients_list"
                    android:id="@+id/v_ingredients_drop_shadow"
                    android:background="@drawable/drop_shadow"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_recipe_steps"
                    android:layout_below="@id/v_ingredients_drop_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/recipe_detail_recyclerview_top_padding"
                    android:background="@color/colorPrimaryPale"/>
        </RelativeLayout>
...
