<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.kelldavis.yummy.fragment.RecipeListFragment">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/recipe_list_recyclerview_top_padding"
            android:paddingLeft="@dimen/recipe_list_recyclerview_horizontal_padding"
            android:paddingRight="@dimen/recipe_list_recyclerview_horizontal_padding"
            android:background="@color/colorPrimaryPale"/>

    <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/error_message_padding"
            android:text="@string/error_message"
            android:textSize="@dimen/error_message_text_size"
            android:visibility="invisible"/>

    <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="@dimen/loading_indicator_width_and_height"
            android:layout_width="@dimen/loading_indicator_width_and_height"
            android:layout_gravity="center"
            android:visibility="invisible"/>

</FrameLayout>
